<resources>
    <string name="app_name">ChatApp</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_profile">Profile</string>
    <string name="description">description</string>
    <string name="completeSignupProfile">complete</string>
    <string name="activities">activities</string>
    <string name="type_a_message">Type a message</string>
    <string name="select_user">Select User</string>
    <string name="online">Online</string>
    <string name="adding_button_fab">adding button fab</string>
    <string name="share_location">Share location</string>
    <string name="appName">Hola Chat</string>
    <string name="from">from</string>
    <string name="finish_sharing_location">finish sharing location</string>
    <string name="anonymous_user">Anonymous User</string>
    <string name="continue_with">Continue with</string>
    <string name="logo_app">logo app</string>
    <string name="search_name">Search name</string>
    <string name="visit_link">Visit link</string>
    <string-array name="status">
        <item>available</item>
        <item>busy</item>
        <item>offline</item>
    </string-array>
</resources>