<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/background_screen"
    android:padding="@dimen/_24sdp"
    tools:context=".activities.SignInActivity">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_marginBottom="@dimen/_40sdp"
        android:gravity="center"
        android:text="@string/login_to_continue"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginText"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/background_input"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="@dimen/_12sdp"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13ssp" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputEmail"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/background_input"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/_12sdp"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_13ssp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:backgroundTint="@color/white"
        android:padding="@dimen/_10sdp"
        android:text="@string/sign_in"
        android:textColor="@color/primary"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_8sdp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_below="@id/inputPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_25sdp"
        android:visibility="invisible" />


    <TextView
        android:id="@+id/textCreateNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/create_new_account"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/continue_with"
        android:textColor="@color/primary"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/signInWithFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_toEndOf="@id/others"
        android:src="@drawable/icon_facebook" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_toEndOf="@id/signInWithFacebook"
        android:src="@drawable/icon_google" />


</RelativeLayout>