<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    tools:context=".activities.ChatActivity">

    <View
        android:id="@+id/viewBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/background_content_top"
        app:layout_constraintBottom_toTopOf="@id/layoutSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/headerBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary"
        app:layout_constraintBottom_toTopOf="@id/viewSupporter"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_back"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageInfo"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_info"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageBack"
        app:layout_constraintEnd_toStartOf="@id/imageInfo"
        app:layout_constraintStart_toEndOf="@id/imageBack"
        app:layout_constraintTop_toTopOf="@id/imageBack" />

    <View
        android:id="@+id/viewSupporter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/imageBack" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:padding="@dimen/_20sdp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@id/viewBackground"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter"
        app:stackFromEnd="true" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        app:layout_constraintBottom_toBottomOf="@id/viewBackground"
        app:layout_constraintEnd_toEndOf="@id/viewBackground"
        app:layout_constraintStart_toStartOf="@id/viewBackground"
        app:layout_constraintTop_toTopOf="@id/viewBackground" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_adding"
        app:fabCustomSize="@dimen/_40sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_21sdp"
        android:backgroundTint="@color/primary"
        android:contentDescription="@string/adding_button_fab"
        android:src="@drawable/ic_add"
        app:borderWidth="0dp"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_img"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        app:fabCustomSize="@dimen/_40sdp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:borderWidth="0dp"
        app:tint="@color/primary"
        android:contentDescription="@string/adding_button_fab"
        android:src="@drawable/ic_img"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_21sdp"
        app:layout_constraintBottom_toTopOf="@id/fab_adding"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_location"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/adding_button_fab"
        android:src="@drawable/ic_location"
        app:borderWidth="0dp"
        app:fabCustomSize="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_21sdp"
        app:layout_constraintBottom_toTopOf="@id/fab_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/primary" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_21sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@drawable/background_chat_input"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fab_adding"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/inputMessage"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/type_a_message"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_4sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_send"
            android:tint="@color/secondary_text" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <TextView
        android:id="@+id/textAvailability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:gravity="center"
        android:padding="@dimen/_2sdp"
        android:text="@string/online"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter" />


</androidx.constraintlayout.widget.ConstraintLayout>